--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@
         </form>
       </div>
     </div>
+    <div class="panel panel-default"> <!-- Checklist -->
+      <div class="panel-body">
+        <h4>Pending Orders:</h4>
+        <div data-coffee-order="checklist">
+        </div>
+      </div>
+    </div>
   </section>
-    <script src="scripts/datastore.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>    <script src="scripts/datastore.js" charset="utf-8"></script>
+    <script src="scripts/formhandler.js" charset="utf-8"></script>
     <script src="scripts/truck.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
