Commented out console.log to limit ESLint Errors and Commented Code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+    Author: Nathaniel Richards
+    Description: Assignment #3
+    Due: 9/24/2019
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
